Bug 1111387 - Nullcheck mTaskQueue in TrackBuffer::QueueInitializeDecoder, as we can shutdown in between dispatching and running the task that calls QueueInitializeDecoder. r=cajbir